# CaffQL

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  LICENSE.txt  README.md  format.sh
src/: BoxedOptional.hpp  CodeGeneration.cpp  CodeGeneration.hpp  Json.hpp  main.cpp
tests/: CMakeLists.txt
tests/src/: BoxedOptionalTests.cpp  CodeGenerationTests.cpp  test-main.cpp
